# factory-management

./: .gitignore  docker-compose.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: aa6c2fc00725_initial.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  factory.py  factory_category.py  model.py  product.py
backend/app/routers/: __init__.py  factory_category_router.py  factory_router.py  model_router.py  product_router.py  upload_router.py
backend/app/schemas/: factory.py  factory_category.py  model.py  product.py
backend/app/services/: factory_category_service.py  factory_service.py  model_service.py  product_service.py
backend/tests/: conftest.py  test_factory.py  test_factory_category.py  test_model.py  test_product.py
frontend/: Dockerfile  README.md  nginx.conf  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/app/: app.dart
frontend/lib/app/di/: injection.dart
frontend/lib/app/router/: app_router.dart
frontend/lib/core/constants/: app_colors.dart  app_fonts.dart  app_sizes.dart  app_strings.dart
frontend/lib/core/error/: failures.dart
frontend/lib/core/locale/: locale_controller.dart
frontend/lib/core/network/: dio_client.dart
frontend/lib/core/theme/: app_theme.dart
frontend/lib/core/utils/: app_toast.dart
frontend/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ru.dart  app_localizations_uz.dart  app_ru.arb  app_uz.arb
frontend/web/: index.html  manifest.json
(+53 files in other folders)
